--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,7 @@ buildscript {
 	}
 
 	dependencies {
-//		classpath "io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE"
 		classpath "org.springframework.boot:spring-boot-gradle-plugin:${project.bootVersion}"
-//		classpath "org.springframework.cloud:spring-cloud-contract-gradle-plugin:2.0.1.RELEASE"
 		classpath "org.flywaydb:flyway-gradle-plugin:5.0.7"
 
 	}
@@ -32,7 +30,7 @@ repositories {
 	maven {
 		url 'https://maven.aliyun.com/repository/central/'
 	}
-    mavenCentral()
+	mavenCentral()
 }
 
 sourceCompatibility = 1.8
@@ -53,19 +51,14 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core:5.0.7'
 	implementation 'commons-io:commons-io:2.5'
 	compileOnly 'org.projectlombok:lombok:1.18.0'
-//	annotationProcessor 'org.projectlombok:lombok:1.18.0'
-//	testImplementation 'org.projectlombok:lombok:1.18.0'
+
 	testImplementation 'org.codehaus.groovy:groovy-all:2.4.6'
 	testImplementation 'org.spockframework:spock-core:1.0-groovy-2.4'
 	testImplementation 'org.spockframework:spock-spring:1.0-groovy-2.4'
 	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
 
-
-	compileOnly 'org.projectlombok:lombok:1.18.0'
-	annotationProcessor 'org.projectlombok:lombok:1.18.0'
-
-	testCompileOnly 'org.projectlombok:lombok:1.18.0'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.0'
+	implementation "org.projectlombok:lombok:1.18.16"
+	annotationProcessor "org.projectlombok:lombok:1.18.16"
 }
 
 dependencyManagement {
